--- a/_public/cms/index.html
+++ b/_public/cms/index.html
@@ -31,7 +31,7 @@
           type: 'checkbox',
           checked: Boolean(this.props.value),
           onChange: (event) => {
-            this.props.onChange(event.target.checked ? '"{{ page.filePathStem }}/index.html"' : false)
+            this.props.onChange(event.target.checked ? "{{ page.filePathStem }}/index.html" : false)
           },
         })]});
       },
